# kitmap

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: db.rs  listen.rs  mod.rs  preview.rs  reset.rs
src/db/: mod.rs  models.rs  schema.rs
src/stats/: calculator.rs  mod.rs
src/ui/: heatmap.rs  mod.rs
web/: index.html  package.json
web/src/: index.css  main.tsx  page.tsx  types.ts
web/src/components/: highlights-card.tsx  keyboard-heatmap.tsx  recording-info-card.tsx  shareable-image.tsx  stat-cards.tsx  stat-charts.tsx
web/src/components/ui/: button.tsx  card.tsx
web/src/lib/: format-key-name.ts
